# pyrosa

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package.json  pyproject.toml  webpack.config.js
static/assets/: template.md
static/js/: index.js
static/styles/: layout.css
templates/: index.html
