[tool.poetry]
name = "pyrosa"
version = "0.1.0"
description = ""
license = "BSD 3-Clause License"
authors = ["Benjamin Maccini <benjaminmaccini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
matrix-nio = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
